# jadetrade2026

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.claude/: settings.local.json
backend/: check-db.js  check-logs.js  check-users.js  create-logs-table.js  create-tables.js  create-trading-tables.js  package-lock.json  package.json  schema.sql  server.js  setup-tables.js  update-tier.js  writefiles.js  writefiles2.js  writefiles3.js  writefiles4.js  writefiles5.js
backend/src/: auth.js  db.js  index.js  user-service.js
bot-engine/: .env.example  Dockerfile  chat_test.html  demo_server.py  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py  simple_server.py  test_loki.py  test_server.py  ws_test.html
bot-engine/app/: config.py  main.py
bot-engine/app/ai/: __init__.py  chat_engine.py  context_builder.py  embeddings.py  prompts.py
bot-engine/app/api/: auth.py  chat.py  exchanges.py  positions.py  trades.py  webhooks.py  websocket.py
bot-engine/app/core/: auth.py  database.py  dependencies.py  key_service.py  queue.py  redis.py  risk_manager.py  signal_dependencies.py  strategy_service.py  trade_executor.py
bot-engine/app/exchanges/: base.py  binance.py  ccxt_adapter.py  factory.py
bot-engine/app/logging/: logger.py
bot-engine/app/workers/: signal_processor.py
bot-engine/tests/: load_test.py  security_audit.py
docs/: API_KEYS_AND_SETUP.md
docs/plans/: 2025-12-05-platform-upgrade-hybrid-architecture.md  (+1 more)
logging-stack/: docker-compose.yml
src/: App.tsx  index.css
supabase/: config.toml
(+50 files in other folders)
