[project]
name = "jadetrade-bot-engine"
version = "1.0.0"
description = "Low-latency trading bot engine for JadeTrade"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "httpx>=0.26.0",
    "ccxt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "anthropic>=0.18.0",
    "openai>=1.10.0",
    "pgvector>=0.2.4",
    "numpy>=1.26.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "structlog>=24.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
